# prometrix

./: .gitignore  CODING-CONVENTIONS.md  CONTRIBUTING.md  README.md  azure-auth-setup.md  pyproject.toml
.github/workflows/: test-prometrix.yml
prometheus_kubernetes_cli/: __init__.py  auth.py  custom_connect.py  models.py  utils.py
prometheus_kubernetes_cli/connect/: aws_connect.py  custom_connect.py
prometheus_kubernetes_cli/models/: prometheus_config.py
prometrix/: __init__.py  auth.py  exceptions.py  utils.py
prometrix/connect/: aws_connect.py  custom_connect.py
prometrix/models/: prometheus_config.py  prometheus_result.py
tests/: config_github_kind.yaml  main.py  test_config_example.yaml
