[tool.poetry]
name = "prometrix"
version = "0.2.0"
authors = ["Avi Kotlicky <avi@robusta.dev>"]
readme = "README.md"
packages = [{include = "prometrix"}]
description = "A Python Prometheus client for all Prometheus instances."

[project.urls]
"Homepage" = "https://github.com/robusta-dev/prometrix"
"Bug Tracker" = "https://github.com/robusta-dev/prometrix/issues"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.15"
botocore = "^1.31.15"
pydantic = "^1.8.1"
prometheus-api-client = "^0.5.3"
pillow = "^10.3.0" # added to Pin transitive dependency, not needed directly
fonttools = "^4.43.0" # added to Pin transitive dependency, not needed directly
urllib3 = "^1.26.20" # added to Pin transitive dependency, not needed directly
zipp = "^3.20.1" # added to Pin transitive dependency, not needed directly
idna = "^3.7"
requests = "^2.32.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pyyaml = "^6.0.0"
pytimeparse = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
