[tool.poetry]
name = "prometrix"
version = "0.2.9"
authors = ["Avi Kotlicky <avi@robusta.dev>"]
readme = "README.md"
packages = [{include = "prometrix"}]
description = "A Python Prometheus client for all Prometheus instances."

[tool.poetry.urls]
"Homepage" = "https://github.com/robusta-dev/prometrix"
"Bug Tracker" = "https://github.com/robusta-dev/prometrix/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
urllib3 = ">=2.6.0,<3.0.0" # pinned to patch urllib3 cves
botocore = "^1.38"
boto3 = "^1.38"
pydantic = ">=1.8.1,<3"
prometheus-api-client = "^0.5.3"
pillow = "^10.3.0" # added to Pin transitive dependency, not needed directly
fonttools = "^4.43.0" # added to Pin transitive dependency, not needed directly
zipp = "^3.20.1" # added to Pin transitive dependency, not needed directly
idna = "^3.7"
requests = ">2.32.4"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pyyaml = "^6.0.0"
pytimeparse = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
